19990619-09:49 CET Patrick Mast
  * Updated build numbers

19990619-09:40 CET Patrick Mast
  * tests\working\hscript\hscript.prg
    removed line 150
    
19990618-21:50 EDT David G. Holm <dholm@jsd-llc.com>
  * makefile.icc
    - genobj.c was moved to source/contrib
  * source/compiler/harbour.y
    - Added missing type overrides to OurMalloc() calls
  * tests/working/scroll.prg
    - Modified to use the preprocessor

19990618-20:55 EDT David G. Holm <dholm@jsd-llc.com>
  * source/rtl/dir.c
    - Corrected #if test GNU C on Unix/Linux test to use && ! instead of || !
      in order to force DJGPP to use DOS functions instead of Unix functions

19990619-00:52 Ryszard Glab <rglab@imid.med.pl>

* config/linux/gcc.cf
 * added default gcc library libm
 * added location of libm library (I have assumed /usr/lib)
 
* source/include/hbsetup.h
 + the order of static variables initialisation is not determined in 
   gcc on Linux. This requires the definition of HARBOUR_START_PROCEDURE
   The dafault is 'MAIN'

- tests/working/next.prg 
 - removed because it is contained in keywords.prg
 
* tests/working/Makefile
 -removed reference to next.prg
 

19990618-23:17 CET Patrick Mast
  * Release of Build #27
  * version.h, updated build version

19990618-19:39 CET Patrick Mast
  * tests\working\hscript\bld32exe.bat
    changed line 17 : echo ..\runner.obj >> b32.bc
    because runner.obj is not in tests\working\hscript but in tests\working

19990618-17:00 CET Victor Szel <info@szelvesz.hu>
  * Fixed some GCC warnings in:
    source/compiler/harbour.y
  * Some left _parc()/_parni()/_parnl() prefixed with hb_
    source/rtl/dir.c
    source/rtl/files.c
  * Fixed PADR(), PADL(), PADC() when called with a width
    less than the length of the string.
    Submitted by Matthew Hamilton <MHamilton@bunge.com.au>
    source/rtl/strings.c

19990618-13:40 Alexander Kresin
 updated:
 * source\hbpp\hbppmain.c
 * source\hbpp\hbpp.c
 * source\hbpp\table.c
  Fixed some problems with preprocessor
