@@ -1,6 +1,9 @@
 //NOTEST
 // Warning: This sample must be tested using /dTEST compiler flag
 
+//TODO: Check why there is core dump om Linux if this file is compiled
+// without /dTEST
+
 #define FIRST
 #define SECOND
 #define THIRD
